# Projeto-REVO-Engine

./: .gitignore  CMakeLists.txt  README.md  build.bat  run_server.bat  run_test.bat  stop_server.bat
docs/: PRIMEIROS_PASSOS.md
engine/: CMakeLists.txt
engine/core/: engine.cpp  engine.hpp  game_loop.cpp  game_loop.hpp
engine/ecs/: world.cpp  world.hpp
engine/network/: message_dispatcher.hpp  protocol.hpp  server_socket.cpp  server_socket.hpp
engine/scripting/: python_bridge.cpp  python_bridge.hpp
scripts/: test_client.py
scripts/ai/: __init__.py  goblin.py
scripts/quests/: __init__.py  tutorial.py
server/: CMakeLists.txt
server/game/: game_server.cpp  main.cpp
server/zone/: zone_manager.cpp
tests/: CMakeLists.txt
tests/unit/: test_ecs.cpp  test_network.cpp  test_scripting.cpp
